--- a/packages/_ui/package.json
+++ b/packages/_ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@useweb/ui-dev",
-  "version": "1.1.8",
+  "version": "1.1.9",
   "description": "UI components to speed up app development",
   "main": "index.js",
   "type": "module",
@@ -21,12 +21,14 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.0.0",
-    "ts-toolbelt": "^9.6.0"
+    "ts-toolbelt": "^9.6.0",
+    "@mui/system": "^5.0.0"
   },
   "devDependencies": {
     "@check-light-or-dark/color": "^1.0.3",
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
+    "@mui/system": "^5.0.0",
     "@mui/material": "^5.0.0",
     "@useweb/compiler": "^2.5.0",
     "@useweb/flatten-object": "^1.0.1",
