--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.27.1",
     "@typescript-eslint/parser": "^5.27.1",
+    "chalk": "^4.1.2",
     "command-line-args": "^5.2.0",
     "concurrently": "^7.2.1",
     "dotenv-parse-variables": "^2.0.0",
