--- a/packages/serverless/firebase/messaging/useFirebaseMessaging/package.json
+++ b/packages/serverless/firebase/messaging/useFirebaseMessaging/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@useweb/use-firebase-messaging",
-  "version": "2.3.1",
+  "version": "2.3.2",
   "main": "./build/index.js",
   "author": "Jeremy Tenjo",
   "types": "./build/types/index.d.ts",
@@ -8,7 +8,7 @@
     "build"
   ],
   "scripts": {
-    "build": "node ./node_modules/@useweb/compiler/build",
+    "build": "node ./node_modules/@useweb/compiler/build --indexDtsDirPathFallback useFirebaseMessaging",
     "build:watch": "node ./node_modules/@useweb/compiler/build --watch",
     "deploy": "npm run build && npm publish --access public"
   },
@@ -18,7 +18,7 @@
     "react": "^18.0.0"
   },
   "devDependencies": {
-    "@useweb/compiler": "2.6.0",
+    "@useweb/compiler": "2.7.0",
     "@useweb/use-firebase": "^8.1.0",
     "firebase": "^9.6.0"
   }
