--- a/packages/serverless/firebase/messaging/useFirebaseMessaging/package.json
+++ b/packages/serverless/firebase/messaging/useFirebaseMessaging/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@useweb/use-firebase-messaging",
-  "version": "2.3.2",
+  "version": "2.3.3",
   "main": "./build/index.js",
   "author": "Jeremy Tenjo",
   "types": "./build/types/index.d.ts",
@@ -8,7 +8,7 @@
     "build"
   ],
   "scripts": {
-    "build": "node ./node_modules/@useweb/compiler/build --indexDtsDirPathFallback useFirebaseMessaging",
+    "build": "node ./node_modules/@useweb/compiler/build --indexDtsDirPathFallback useFirebaseMessaging/src",
     "build:watch": "node ./node_modules/@useweb/compiler/build --watch",
     "deploy": "npm run build && npm publish --access public"
   },
