--- a/packages/dataDisplay/FetchingUi/package.json
+++ b/packages/dataDisplay/FetchingUi/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@useweb/fetching-ui",
-  "version": "5.2.0",
+  "version": "5.3.0",
   "main": "./build/index.js",
   "author": "Jeremy Tenjo",
   "types": "./build/types/index.d.ts",
@@ -16,6 +16,7 @@
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
     "@mui/material": "^5.0.0",
+    "react-json-view": "^1.21.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
@@ -25,9 +26,7 @@
     "@mui/material": "^5.0.0",
     "@useweb/compiler": "2.0.0",
     "react": "^18.0.0",
+    "react-json-view": "^1.21.3",
     "react-dom": "^18.0.0"
-  },
-  "dependencies": {
-    "react-json-view": "^1.21.3"
   }
 }
