--- a/packages/serverless/firebase/firebase/package.json
+++ b/packages/serverless/firebase/firebase/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@useweb/use-firebase-builder",
-  "version": "9.0.0",
+  "name": "@useweb/firebase-builder",
+  "version": "2.0.0",
   "author": "Jeremy Tenjo",
   "type": "module",
   "private": true,
