--- a/packages/serverless/firebase/utils/FirebaseFunctionTester/package.json
+++ b/packages/serverless/firebase/utils/FirebaseFunctionTester/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@useweb/firebase-function-tester",
-  "version": "3.0.0",
+  "version": "3.0.1",
   "main": "./build/index.js",
   "author": "Jeremy Tenjo",
   "types": "./build/types/index.d.ts",
@@ -16,8 +16,7 @@
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
     "@mui/material": "^5.0.0",
-    "@useweb/use-firebase": "^9.0.0",
-    "@useweb/use-firebase-function": "^3.3.0",
+    "@useweb/firebase": "^2.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-json-view": "^1.21.3"
@@ -27,8 +26,7 @@
     "@emotion/styled": "^11.0.0",
     "@mui/material": "^5.0.0",
     "@useweb/compiler": "latest",
-    "@useweb/use-firebase": "^9.0.0",
-    "@useweb/use-firebase-function": "^3.3.0",
+    "@useweb/firebase": "^2.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-json-view": "^1.21.3"
