--- a/packages/data/useData/package.json
+++ b/packages/data/useData/package.json
@@ -13,7 +13,9 @@
     "deploy": "npm run build && npm publish --access public"
   },
   "peerDependencies": {
-    "react": "^18.0.0"
+    "react": "^18.0.0",
+    "@useweb/use-async": "^4.2.0",
+    "@useweb/use-local-storage": "^2.2.0"
   },
   "dependencies": {
     "@useweb/array-db": "^0.4.0"
