--- a/packages/data/useData/package.json
+++ b/packages/data/useData/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@useweb/use-data",
-  "version": "8.8.0",
+  "version": "9.0.0",
   "main": "./build/index.js",
   "author": "Jeremy Tenjo",
   "types": "./build/types/index.d.ts",
@@ -13,17 +13,15 @@
     "deploy": "npm run build && npm publish --access public"
   },
   "peerDependencies": {
-    "react": "^18.0.0",
+    "react": "^18.0.0"
+  },
+  "dependencies": {
+    "@useweb/array-db": "^0.4.0",
     "@useweb/use-async": "^4.2.0",
     "@useweb/use-local-storage": "^2.2.0"
   },
-  "dependencies": {
-    "@useweb/array-db": "^0.4.0"
-  },
   "devDependencies": {
     "@useweb/compiler": "2.0.0",
-    "@useweb/use-async": "^4.2.0",
-    "@useweb/use-local-storage": "^2.2.0",
     "swr": "^1.1.2",
     "ts-toolbelt": "^9.6.0"
   }
