--- a/packages/data/AsyncTester/package.json
+++ b/packages/data/AsyncTester/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@useweb/async-tester",
-  "version": "2.2.0",
+  "version": "2.2.1",
   "main": "./build/index.js",
   "author": "Jeremy Tenjo",
   "types": "./build/types/index.d.ts",
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.0.0",
     "@mui/material": "^5.0.0",
     "react": "^18.0.0",
+    "react-json-view": "^1.21.3",
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
@@ -24,11 +25,12 @@
     "@emotion/styled": "^11.0.0",
     "@mui/material": "^5.0.0",
     "@useweb/compiler": "2.7.0",
+    "react-json-view": "^1.21.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
   "dependencies": {
-    "@useweb/fetching-ui": "^4.0.0",
-    "@useweb/use-async": "^3.2.0"
+    "@useweb/fetching-ui": "^5.3.0",
+    "@useweb/use-async": "^4.2.0"
   }
 }
