--- a/packages/serverless/firebase/firebase/package.json
+++ b/packages/serverless/firebase/firebase/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@useweb/firebase-builder",
-  "version": "3.0.7",
+  "name": "@useweb/firebase",
+  "version": "4.0.0",
   "author": "Jeremy Tenjo",
   "type": "module",
   "private": true,
@@ -14,18 +14,20 @@
     "firebase": "^9.6.0",
     "react": "^18.0.0",
     "swr": "^1.1.0",
+    "@useweb/firebase-config": "^1.0.0",
     "zustand": "^3.7.1"
   },
   "devDependencies": {
     "@useweb/compiler": "2.7.0",
+    "@useweb/firebase-config": "^1.0.0",
     "firebase": "^9.6.0",
     "swr": "^1.1.0",
-    "zustand": "^3.7.1",
-    "ts-node": "^10.8.1"
+    "ts-node": "^10.8.1",
+    "zustand": "^3.7.1"
   },
   "dependencies": {
-    "@useweb/use-async": "^4.2.0",
     "@useweb/array-db": "^0.6.0",
+    "@useweb/use-async": "^4.2.0",
     "@useweb/use-local-storage": "^2.3.0"
   }
 }
