--- a/packages/serverless/firebase/useFirebase/package.json
+++ b/packages/serverless/firebase/useFirebase/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@useweb/firebase-config",
-  "version": "1.0.0",
+  "name": "@useweb/use-firebase",
+  "version": "10.0.1",
   "main": "./build/index.js",
   "author": "Jeremy Tenjo",
   "types": "./build/types/index.d.ts",
