--- a/package.json
+++ b/package.json
@@ -29,45 +29,45 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@storybook/addon-actions": "^6.5.9",
-    "@storybook/addon-essentials": "^6.5.9",
-    "@storybook/addon-links": "^6.5.9",
-    "@storybook/react": "^6.5.9",
-    "@tippyjs/react": "^4.2.6",
-    "airtable": "^0.11.4",
-    "firebase-admin": "^9.8.0",
-    "firebase-functions": "^3.14.1",
-    "lerna": "^5.1.1",
-    "react": "^18.1.0",
-    "react-copy-to-clipboard": "^5.0.4",
-    "react-dom": "^18.1.0",
-    "react-stars": "^2.2.5",
-    "react-tweet-embed": "^2.0.0",
-    "styled-components": "^5.3.5"
+    "@storybook/addon-actions": "6.5.9",
+    "@storybook/addon-essentials": "6.5.9",
+    "@storybook/addon-links": "6.5.9",
+    "@storybook/react": "6.5.9",
+    "@tippyjs/react": "4.2.6",
+    "airtable": "0.11.4",
+    "firebase-admin": "9.8.0",
+    "firebase-functions": "3.14.1",
+    "lerna": "5.1.1",
+    "react": "18.1.0",
+    "react-copy-to-clipboard": "5.0.4",
+    "react-dom": "18.1.0",
+    "react-stars": "2.2.5",
+    "react-tweet-embed": "2.0.0",
+    "styled-components": "5.3.5"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.27.1",
-    "@typescript-eslint/parser": "^5.27.1",
-    "chalk": "^4.1.2",
-    "command-line-args": "^5.2.0",
-    "concurrently": "^7.2.1",
-    "dotenv-parse-variables": "^2.0.0",
-    "esbuild": "^0.14.2",
-    "eslint": "^7.26.0",
-    "eslint-plugin-babel": "^5.3.1",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-jest": "^25.3.0",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.27.1",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "eslint-plugin-storybook": "^0.5.12",
-    "firebase-tools": "^11.1.0",
-    "framer-motion": "^5.4.4",
-    "fs-extra": "^10.0.0",
-    "glob": "^7.2.0",
-    "husky": "^8.0.1",
-    "prettier": "^2.6.2",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.7.3"
+    "@typescript-eslint/eslint-plugin": "5.27.1",
+    "@typescript-eslint/parser": "5.27.1",
+    "chalk": "4.1.2",
+    "command-line-args": "5.2.0",
+    "concurrently": "7.2.1",
+    "dotenv-parse-variables": "2.0.0",
+    "esbuild": "0.14.2",
+    "eslint": "7.26.0",
+    "eslint-plugin-babel": "5.3.1",
+    "eslint-plugin-import": "2.25.3",
+    "eslint-plugin-jest": "25.3.0",
+    "eslint-plugin-jsx-a11y": "6.5.1",
+    "eslint-plugin-react": "7.27.1",
+    "eslint-plugin-react-hooks": "4.3.0",
+    "eslint-plugin-storybook": "0.5.12",
+    "firebase-tools": "11.1.0",
+    "framer-motion": "5.4.4",
+    "fs-extra": "10.0.0",
+    "glob": "7.2.0",
+    "husky": "8.0.1",
+    "prettier": "2.6.2",
+    "ts-node": "10.8.1",
+    "typescript": "4.7.3"
   }
 }
