--- a/packages/dataDisplay/FetchingUi/package.json
+++ b/packages/dataDisplay/FetchingUi/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@useweb/fetching-ui",
-  "version": "5.3.0",
+  "version": "5.4.0",
   "main": "./build/index.js",
   "author": "Jeremy Tenjo",
   "types": "./build/types/index.d.ts",
@@ -16,9 +16,9 @@
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
     "@mui/material": "^5.0.0",
-    "react-json-view": "^1.21.3",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-json-view": "^1.21.3"
   },
   "devDependencies": {
     "@emotion/react": "^11.0.0",
@@ -26,7 +26,11 @@
     "@mui/material": "^5.0.0",
     "@useweb/compiler": "2.7.0",
     "react": "^18.0.0",
-    "react-json-view": "^1.21.3",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-json-view": "^1.21.3"
+  },
+  "dependencies": {
+    "json-to-ts": "^1.7.0",
+    "react-code-blocks": "^0.0.9-0"
   }
 }
