--- a/packages/serverless/firebase/utils/FirebaseFunctionTester/package.json
+++ b/packages/serverless/firebase/utils/FirebaseFunctionTester/package.json
@@ -17,6 +17,8 @@
     "@emotion/styled": "^11.0.0",
     "@mui/material": "^5.0.0",
     "@useweb/firebase": "^3.0.0",
+    "firebase": "^9.8.4",
+    "zustand": "^3.7.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-json-view": "^1.21.3"
@@ -29,6 +31,8 @@
     "@useweb/firebase": "^3.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "firebase": "^9.8.4",
+    "zustand": "^3.7.2",
     "react-json-view": "^1.21.3"
   },
   "dependencies": {
