--- a/packages/data/FetchTester/package.json
+++ b/packages/data/FetchTester/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@useweb/fetch-tester",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "main": "./build/index.js",
   "author": "Jeremy Tenjo",
   "types": "./build/types/index.d.ts",
@@ -17,8 +17,8 @@
     "@emotion/styled": "^11.0.0",
     "@mui/material": "^5.0.0",
     "react": "^18.0.0",
-    "react-json-view": "^1.21.3",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-json-view": "^1.21.3"
   },
   "devDependencies": {
     "@emotion/react": "^11.0.0",
@@ -26,11 +26,11 @@
     "@mui/material": "^5.0.0",
     "@useweb/compiler": "2.7.0",
     "react": "^18.0.0",
-    "react-json-view": "^1.21.3",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-json-view": "^1.21.3"
   },
   "dependencies": {
-    "@useweb/fetching-ui": "^5.4.1",
+    "@useweb/fetching-ui": "5.4.2",
     "@useweb/use-fetch": "^1.2.1"
   }
 }
