--- a/packages/_ui/package.json
+++ b/packages/_ui/package.json
@@ -35,6 +35,12 @@
     "@useweb/use-event-listener": "^1.0.0",
     "react-hook-form": "^7.0.0",
     "ts-node": "^10.8.1",
-    "ts-toolbelt": "^9.6.0"
+    "ts-toolbelt": "^9.6.0",
+    "next": "^12.0.0"
+  },
+  "peerDependenciesMeta": {
+    "next": {
+      "optional": true
+    }
   }
 }
