--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
   },
   "main": "firebase/functions/build/index.js",
   "scripts": {
-    "dev": "node --loader ts-node/esm ./scripts/dev/run.ts",
+    "dev": "node --loader ts-node/esm ./scripts/dev/run.ts --refresh-stories-list",
     "dev:with-firebase-functions": "concurrently 'npm run dev' 'npm run functions:build:watch' 'npm run functions:serve'",
-    "dev:refresh-storiesList": "node --loader ts-node/esm ./scripts/dev/run.ts --refresh-stories-list",
     "build": "node --loader ts-node/esm ./scripts/buildApp/run.ts",
     "deploy": "node --loader ts-node/esm ./scripts/deploy/run.ts",
     "deploy:firebase-hosting": "firebase deploy --only hosting",
