--- a/packages/utils/browser/dom/useWindowSize/package.json
+++ b/packages/utils/browser/dom/useWindowSize/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@useweb/dom",
-  "version": "1.3.0",
+  "name": "@useweb/use-window-size",
+  "version": "1.0.0",
   "main": "./build/index.js",
   "author": "Jeremy Tenjo",
   "types": "./build/types/index.d.ts",
@@ -13,9 +13,12 @@
     "deploy": "npm run build && npm publish --access public"
   },
   "peerDependencies": {
-    "react": "^18.0.0"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
-    "@useweb/compiler": "2.7.0"
+    "@useweb/compiler": "latest",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   }
 }
